package mini5.dummyshop.entity;

import jakarta.persistence.*;
import lombok.Data;
import lombok.NoArgsConstructor;

@NoArgsConstructor
@Data
@Entity
@Table(name = "carts", uniqueConstraints = {
        @UniqueConstraint(name = "uk_user_product", columnNames = { "user_id", "product_id" }),
        @UniqueConstraint(name = "uk_session_product", columnNames = { "session_id", "product_id" })
})
public class Cart {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(name = "session_id")
    private String sessionId;

    @Column(name = "user_id")
    private Long userId;

    @Column(name = "product_id")
    private Long productId;

    @Column(nullable = false)
    private int quantity;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "product_Id", insertable = false, updatable = false)
    private Product product;
}
